# P3552-task

./: .gitignore  CMakeLists.txt  Makefile  README.md  beman-affinity.cpp  beman-alloc.cpp  beman-loop.cpp  beman-return.cpp  beman-stopped.cpp  demo-affine.cpp  demo-affinity.cpp  demo-alloc.cpp  demo-allocator.hpp  demo-any_scheduler.hpp  demo-async-lock.cpp  demo-co_await-result.cpp  demo-container.cpp  demo-error.cpp  demo-friendly.cpp  demo-hello.cpp  demo-inline_scheduler.hpp  demo-into_optional.cpp  demo-into_optional.hpp  demo-lazy.hpp  demo-loop.cpp  demo-poly.hpp  demo-query.cpp  demo-result_example.cpp  demo-stop.cpp  demo-stop_source.hpp  demo-task.hpp  demo-thread_pool.hpp  lazy.md  stdexec-affinity.cpp  stdexec-alloc.cpp  stdexec-loop.cpp  stdexec-naive-task.hpp  stdexec-naive-task2.hpp  stdexec-return.cpp  stdexec-stopped.cpp  (+5 more)
